# algorithmics_tasks

./: CMakeLists.txt  task_builder.sh
tasks/: CMakeLists.txt
tasks/task_B/: CMakeLists.txt
tasks/task_B/c_src_1/: CMakeLists.txt  solution.c
tasks/task_C/: CMakeLists.txt
tasks/task_C/c_src_1/: CMakeLists.txt  solution.c
tasks/task_E/: CMakeLists.txt
tasks/task_E/c_src_1/: CMakeLists.txt  solution.c
tasks/task_F/: CMakeLists.txt
tasks/task_F/c_src_1/: CMakeLists.txt  solution.c
